fixed background clipping

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,5 +2,6 @@
 body {
     background-color: #537895;
     background-image: linear-gradient(315deg, #537895 0%, #09203f 74%);
-        background-size: 100% 100vh;
+    resize: both;
+    background-size: 100% 180vh;
 }
